CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(natwg C)
INCLUDE(GNUInstallDirs)

ADD_DEFINITIONS(-Wall -Werror -lresolv -lressl)
ADD_EXECUTABLE(natwg nat-punch-client.c)

IF(CMAKE_C_COMPILER_VERSION VERSION_GREATER 6)
	ADD_DEFINITIONS(-Wextra -Wno-unused-parameter)
ENDIF()

IF(UNIT_TESTING)
	ENABLE_TESTING()
ENDIF()

INSTALL(TARGETS natwg RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
